--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dropchop.quarkus</groupId>
   <artifactId>quarkus-snakejar-parent</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Quarkus Snakejar - Parent</name>
+  <url>https://github.com/ivlcic/quarkus-snakejar</url>
+
   <modules>
     <module>deployment</module>
     <module>runtime</module>
   </modules>
+
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>
