--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <packaging>pom</packaging>
   <name>Quarkus Snakejar - Parent</name>
   <url>https://github.com/ivlcic/quarkus-snakejar</url>
+  <description>
+    Quarkus extension that integrates SnakeJar Java library with embedded CPython to Quarkus.
+    This extension enables calling Python native code from Quarkus REST services.
+  </description>
 
   <modules>
     <module>deployment</module>
