Fixing pom.xml. Prepping for release.

--- a/release.properties
+++ b/release.properties
@@ -1,5 +1,5 @@
 #release configuration
-#Mon Nov 15 09:41:27 CET 2021
+#Mon Apr 18 20:59:52 CEST 2022
 projectVersionPolicyId=default
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 exec.additionalArguments=-P default,maven-central
