--- a/snakejar-example/pom.xml
+++ b/snakejar-example/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.0.8-SNAPSHOT</version>
+    <version>1.0.8</version>
   </parent>
 
   <artifactId>snakejar-example</artifactId>
-  <version>1.0.8-SNAPSHOT</version>
+  <version>1.0.8</version>
   <name>Quarkus Snakejar - Example</name>
 
   <properties>
