--- a/deployment/src/test/resources/invokers.properties
+++ b/deployment/src/test/resources/invokers.properties
@@ -8,12 +8,9 @@ quarkus.snakejar.log-level=debug
 
 quarkus.snakejar.core-threads=1
 quarkus.snakejar.max-threads=1
-quarkus.snakejar.thread-pool=test
+quarkus.snakejar.thread-pool-name=test
 quarkus.snakejar.module-order=sub-module, add-module
 quarkus.snakejar.modules.add-module.source=src/test/python/add.py
 quarkus.snakejar.modules.sub-module.source=src/test/python/sub.py
 
-quarkus.snakejar.invoker1.core-threads=1
-quarkus.snakejar.invoker1.max-threads=1
-quarkus.snakejar.invoker1.thread-pool=test
 quarkus.snakejar.invoker1.modules.sub-module.source=src/test/python/sub.py
