--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
   </scm>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
+    <release-plugin.version>2.5.3</release-plugin.version>
+    <deploy-plugin.version>3.8.1</deploy-plugin.version>
+    <gpg-plugin.version>3.0.1</gpg-plugin.version>
+    <source-plugin.version>3.2.0</source-plugin.version>
+    <javadoc-plugin.version>3.3.1</javadoc-plugin.version>
+    <deploy-plugin.version>2.7</deploy-plugin.version>
     <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>17</maven.compiler.source>
@@ -103,9 +109,17 @@
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.3.1</version>
+          <version>${javadoc-plugin.version}</version>
           <configuration>
             <doclint>none</doclint>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>${release-plugin.version}</version>
+          <configuration>
+            <arguments>-DskipTests=true -Dmaven.test.skip=true</arguments>
           </configuration>
         </plugin>
       </plugins>
@@ -118,7 +132,7 @@
         <plugins>
           <plugin>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.0.1</version>
+            <version>${gpg-plugin.version}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
