--- a/snakejar-example/pom.xml
+++ b/snakejar-example/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.1.11-SNAPSHOT</version>
+    <version>1.1.11</version>
   </parent>
 
   <artifactId>snakejar-example</artifactId>
-  <version>1.1.11-SNAPSHOT</version>
+  <version>1.1.11</version>
   <name>Quarkus Snakejar - Example</name>
 
   <properties>
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>com.dropchop.quarkus</groupId>
       <artifactId>quarkus-snakejar</artifactId>
-      <version>1.1.11-SNAPSHOT</version>
+      <version>1.1.11</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
