--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.1.13-SNAPSHOT</version>
+    <version>1.35.1</version>
   </parent>
   <artifactId>quarkus-snakejar</artifactId>
   <name>Quarkus Snakejar - Runtime</name>
@@ -26,7 +26,7 @@
     <plugins>
       <plugin>
         <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-bootstrap-maven-plugin</artifactId>
+        <artifactId>quarkus-extension-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
         <executions>
           <execution>
