--- a/snakejar-example/pom.xml
+++ b/snakejar-example/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.1.13-SNAPSHOT</version>
+    <version>1.35.1</version>
   </parent>
 
   <artifactId>snakejar-example</artifactId>
-  <version>1.1.13-SNAPSHOT</version>
+  <version>1.35.1</version>
   <name>Quarkus Snakejar - Example</name>
 
   <properties>
@@ -20,7 +20,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>2.11.1.Final</quarkus.platform.version>
+    <quarkus.platform.version>${quarkus.version}</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
   </properties>
 
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>com.dropchop.quarkus</groupId>
       <artifactId>quarkus-snakejar</artifactId>
-      <version>1.1.13-SNAPSHOT</version>
+      <version>1.35.1</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
