Native image config fix.

--- a/pom.xml
+++ b/pom.xml
@@ -42,22 +42,34 @@
   </scm>
 
   <properties>
-    <compiler-plugin.version>3.8.1</compiler-plugin.version>
-    <release-plugin.version>2.5.3</release-plugin.version>
-    <deploy-plugin.version>3.8.1</deploy-plugin.version>
-    <gpg-plugin.version>3.0.1</gpg-plugin.version>
-    <source-plugin.version>3.2.0</source-plugin.version>
-    <javadoc-plugin.version>3.3.1</javadoc-plugin.version>
-    <deploy-plugin.version>2.7</deploy-plugin.version>
+    <clean-plugin.version>3.3.2</clean-plugin.version>
+    <resources-plugin.version>3.3.1</resources-plugin.version>
+    <source-plugin.version>3.3.0</source-plugin.version>
+    <compiler-plugin.version>3.11.0</compiler-plugin.version>
+    <surefire-plugin.version>3.2.2</surefire-plugin.version>
     <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>
+    <jar-plugin.version>3.3.0</jar-plugin.version>
+    <gpg-plugin.version>3.1.0</gpg-plugin.version>
+    <install-plugin.version>3.1.1</install-plugin.version>
+    <deploy-plugin.version>3.1.1</deploy-plugin.version>
+    <site-plugin.version>3.12.1</site-plugin.version>
+    <project-info-reports-plugin.version>3.4.5</project-info-reports-plugin.version>
+    <javadoc-plugin.version>3.6.2</javadoc-plugin.version>
+    <aspectj-plugin.version>1.14.0</aspectj-plugin.version>
+    <lombok-plugin.version>1.18.20.0</lombok-plugin.version>
+    <antrun-plugin.version>3.1.0</antrun-plugin.version>
+
+
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     <quarkus.version>3.5.2</quarkus.version>
     <snakejar.version>1.35.3-SNAPSHOT</snakejar.version>
-    <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+
     <version.slf4j>1.7.36</version.slf4j>
   </properties>
 
