Native image config fix.

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <quarkus.version>3.5.2</quarkus.version>
-    <snakejar.version>1.35.3-SNAPSHOT</snakejar.version>
+    <snakejar.version>1.35.3</snakejar.version>
 
     <version.slf4j>1.7.36</version.slf4j>
   </properties>
