--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <gpg-plugin.version>3.1.0</gpg-plugin.version>
     <install-plugin.version>3.1.1</install-plugin.version>
     <deploy-plugin.version>3.1.1</deploy-plugin.version>
+    <release-plugin.version>3.0.1</release-plugin.version>
     <site-plugin.version>3.12.1</site-plugin.version>
     <project-info-reports-plugin.version>3.4.5</project-info-reports-plugin.version>
     <javadoc-plugin.version>3.6.2</javadoc-plugin.version>
