--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.dropchop.quarkus</groupId>
   <artifactId>quarkus-snakejar-parent</artifactId>
-  <version>1.35.3</version>
+  <version>1.35.4-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Quarkus Snakejar - Parent</name>
