--- a/snakejar-example/pom.xml
+++ b/snakejar-example/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.35.5-SNAPSHOT</version>
+    <version>1.35.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>snakejar-example</artifactId>
@@ -93,6 +93,14 @@
             <!--suppress MavenModelInspection -->
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${javadoc-plugin.version}</version>
+        <configuration>
+          <doclint>none</doclint>
         </configuration>
       </plugin>
     </plugins>
