--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -10,6 +10,13 @@
   <artifactId>quarkus-snakejar-deployment</artifactId>
   <name>Quarkus Snakejar - Deployment</name>
 
+  <properties>
+    <maven.deploy.skip>false</maven.deploy.skip>
+    <maven.javadoc.skip>false</maven.javadoc.skip>
+    <maven.install.skip>false</maven.install.skip>
+    <maven.source.skip>false</maven.source.skip>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -26,6 +33,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
