--- a/pom.xml
+++ b/pom.xml
@@ -44,27 +44,27 @@
   <properties>
     <clean-plugin.version>3.3.2</clean-plugin.version>
     <resources-plugin.version>3.3.1</resources-plugin.version>
-    <source-plugin.version>3.3.0</source-plugin.version>
-    <compiler-plugin.version>3.11.0</compiler-plugin.version>
-    <surefire-plugin.version>3.2.2</surefire-plugin.version>
+    <source-plugin.version>3.3.1</source-plugin.version>
+    <compiler-plugin.version>3.13.0</compiler-plugin.version>
+    <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>
-    <jar-plugin.version>3.3.0</jar-plugin.version>
-    <gpg-plugin.version>3.1.0</gpg-plugin.version>
-    <install-plugin.version>3.1.1</install-plugin.version>
-    <deploy-plugin.version>3.1.1</deploy-plugin.version>
+    <jar-plugin.version>3.4.1</jar-plugin.version>
+    <gpg-plugin.version>3.2.4</gpg-plugin.version>
+    <install-plugin.version>3.1.2</install-plugin.version>
+    <deploy-plugin.version>3.1.2</deploy-plugin.version>
     <release-plugin.version>3.0.1</release-plugin.version>
-    <flatten-plugin.version>1.5.0</flatten-plugin.version>
+    <flatten-plugin.version>1.6.0</flatten-plugin.version>
     <site-plugin.version>3.12.1</site-plugin.version>
-    <project-info-reports-plugin.version>3.4.5</project-info-reports-plugin.version>
-    <javadoc-plugin.version>3.6.2</javadoc-plugin.version>
-    <aspectj-plugin.version>1.14.0</aspectj-plugin.version>
+    <project-info-reports-plugin.version>3.5.0</project-info-reports-plugin.version>
+    <javadoc-plugin.version>3.6.3</javadoc-plugin.version>
+    <aspectj-plugin.version>1.15.0</aspectj-plugin.version>
     <lombok-plugin.version>1.18.20.0</lombok-plugin.version>
     <antrun-plugin.version>3.1.0</antrun-plugin.version>
 
-
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.release>21</maven.compiler.release>
 
     <maven.deploy.skip>true</maven.deploy.skip>
     <maven.javadoc.skip>true</maven.javadoc.skip>
@@ -74,10 +74,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <quarkus.version>3.5.2</quarkus.version>
-    <snakejar.version>1.35.7</snakejar.version>
+    <quarkus.version>3.15.1</quarkus.version>
+    <snakejar.version>1.35.8</snakejar.version>
 
-    <version.slf4j>1.7.36</version.slf4j>
+    <slf4j.version>2.0.16</slf4j.version>
   </properties>
 
   <dependencyManagement>
@@ -92,7 +92,7 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>${version.slf4j}</version>
+        <version>${slf4j.version}</version>
       </dependency>
       <dependency>
         <groupId>com.dropchop</groupId>
