--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.35.8-SNAPSHOT</version>
+    <version>1.35.8</version>
   </parent>
 
   <artifactId>quarkus-snakejar-deployment</artifactId>
