--- a/snakejar-example/pom.xml
+++ b/snakejar-example/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.dropchop.quarkus</groupId>
     <artifactId>quarkus-snakejar-parent</artifactId>
-    <version>1.35.8</version>
+    <version>1.35.9-SNAPSHOT</version>
   </parent>
 
   <artifactId>snakejar-example</artifactId>
